--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -6,7 +6,7 @@ RUN mkdir -p /app/fountain
 WORKDIR /app/fountain
 RUN mkdir -p /src/minerva
 RUN mkdir -p /app/minerva
-RUN cd /src/minerva && git clone -b dtls-listen-refactor git://github.com/mcr/openssl.git
+RUN cd /src/minerva && git clone -b dtls-listen-refactor-1.1.1c git://github.com/mcr/openssl.git
 RUN apk add perl
 RUN cd /src/minerva/openssl && ./Configure --prefix=/usr linux-x86_64 && id && make install_sw
 RUN /usr/local/rvm/bin/rvm install 2.6.1
