--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,12 +1,13 @@
 FROM openssl-mcr:base as builder
 
 RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys 62C9E5F4DA300D94AC36166BE206C29FBF04FF17
 RUN \curl -O https://raw.githubusercontent.com/rvm/rvm/master/binscripts/rvm-installer && \curl -O https://raw.githubusercontent.com/rvm/rvm/master/binscripts/rvm-installer.asc \
     && gpg --verify rvm-installer.asc \
-    && bash rvm-installer stable
+    && bash rvm-installer 1.29.8
 
 # this fixed the LDD --version that musl puts on stderr from confusing things
-RUN sed -e 's/ldd --version/&1 2>\&1/g' -i /usr/local/rvm/scripts/functions/detect/system
+RUN sed -e 's/ldd --version/&1 2>\&1/g' -i /usr/local/rvm/scripts/functions/detect_system
 
 RUN /usr/local/rvm/bin/rvm autolibs disable
 RUN /usr/local/rvm/bin/rvm install --disable-binary 2.6.3
