create alpine32 bit base

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,6 +1,4 @@
-FROM scratch
-ADD alpine-minirootfs-3.9.4-armv7.tar.gz /
-MAINTAINER Michael Richardson <mcr@sandelman.ca>
+FROM alpinelinux:base32
 RUN apk --cache-max-age 300 update
 RUN apk --cache-max-age 300 add --no-cache \
         bash perl \
@@ -24,4 +22,5 @@ RUN mkdir -p /app/minerva
 RUN cd /src/minerva && git clone -b dtls-listen-refactor-1.1.1c git://github.com/mcr/openssl.git
 RUN cd /src/minerva/openssl && ./Configure --prefix=/usr --libdir=/lib --openssldir=/usr/lib/ssl no-idea no-mdc2 no-rc5 no-zlib no-ssl3 no-async linux-armv4 && id && make
 RUN cd /src/minerva/openssl && make install_sw
+
 
